fix(auth): allow public preflight requests and normalize API errors